--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,3 @@
-html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+html, body {margin: 0; padding: 0; height: 100%;}
+#map-canvas { height: 50%; width: 50%; margin: 0; padding: 0;}
 #content_header {color: orange;}
