--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
-html, body {margin: 0; padding: 0; height: 100%;}
-#map-canvas { height: 50%; width: 50%; margin: 0; padding: 0;}
+html, body, .map-list {margin: 0; padding: 0; height: 100%; position: relative;}
+#map-canvas { height: 50%; width: 50%; margin: 0; padding: 0; position: absolute; left:0; top:0;}
+#results {height: 50%; width: 50%; margin: 0; padding:0; position: absolute; right:0; top:0;}
 #content_header {color: orange;}
