--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,6 @@ html, body, .map-list {margin: 0; padding: 0; height: 90%; position: relative;}
 #results {height: 100%; width: 50%; margin: 0; padding:0; position: absolute; right:0; top:0; overflow:auto;}
 #content_header {color: orange;}
 #performer-info {width: 50%; word-wrap: break-word;}
+img {width: 100px; height: 100px;}
 .highlight-event {background-color: #FFEBCC;}
 .highlight-performer {background-color: orange;}
