--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,4 @@ html, body, .map-list {margin: 0; padding: 0; height: 90%; position: relative;}
 img {width: 100px; height: 100px;}
 .highlight-event {background-color: #FFEBCC;}
 .highlight-performer {background-color: orange;}
+.artist_name {margin-left: 40px; margin-top: 0px; margin-bottom: 0px;}
