--- a/css/style.css
+++ b/css/style.css
@@ -16,4 +16,27 @@ img {width: 200px; height: 200px;}
 
 .filled {display: none;}
 
-.event-heading {text-align: center}
+.info-heading {font-weight: bold; text-align: center;}
+.info-subheading {font-weight: bold; text-align: center; color:orange;}
+
+.back-btn {display: block; margin: 0 auto;}
+
+/* unvisited link */
+a:link {
+    color: #FF3300;
+}
+
+/* visited link */
+a:visited {
+    color: #FF9900;
+}
+
+/* mouse over link */
+a:hover {
+    color: #FF6600;
+}
+
+/* selected link */
+a:active {
+    color: #FF9933;
+}
