--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,26 @@
+/* unvisited link */
+a:link {
+    color: #FF3300;
+}
+
+/* visited link */
+a:visited {
+    color: #FF9900;
+}
+
+/* mouse over link */
+a:hover {
+    color: #FF6600;
+}
+
+/* selected link */
+a:active {
+    color: #FF9933;
+}
+
 html, body, .map-list {
 	margin: auto;
 	height: 100%;
-	position: relative;
 }
 
 #map-canvas {
@@ -9,13 +28,14 @@ html, body, .map-list {
 	width: 100%;
 }
 
+/* Location Search */
 .location-input {
-	position: fixed;
-	left: 100px;
-	right: 50%;
-	z-index: 1;
+	display:inline-block;
+	width: 125px;
 }
 
+
+/*
 .form-control {
 	display:inline-block;
 	width: 125px;
@@ -25,16 +45,26 @@ html, body, .map-list {
 	color: orange;
 }
 
-.results {
-	height: 100%;
-	width: 350px;
-	position: fixed; right:0; top:0;
+.list-results {
 	background-color: white;
-	overflow: auto;
+	max-width: 350px;
+	position: fixed; right: 0px;
 	z-index: 1;
- }
 
-#venue {
+}
+
+.list-group {
+	height: 350px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	margin: 0px;
+}
+
+.list-group a{
+	color: black;
+}
+
+.venue {
 	width: 100%;
 }
 
@@ -94,23 +124,4 @@ html, body, .map-list {
 	display: block;
 	margin: 0 auto;
 }
-
-/* unvisited link */
-a:link {
-    color: #FF3300;
-}
-
-/* visited link */
-a:visited {
-    color: #FF9900;
-}
-
-/* mouse over link */
-a:hover {
-    color: #FF6600;
-}
-
-/* selected link */
-a:active {
-    color: #FF9933;
-}
+*/
