--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,32 @@ html, body, .map-view {
 	position: relative; top: 10px; left: 40px;
 }
 
+
+/* Results List */ 
 .results-info {
-	position: relative; top: 20px; left: 40px;
+	position: absolute; top: 10px; right: 50px;
 	display: inline-block;
+
+}
+
+.results-button {
+	display: block;
+	margin-left: auto;
+}
+
+.apply-button {
+	width: 49%;
+}
+
+.remove-button {
+	width: 49%;
+	float:right;
+}
+
+.results-list {
+	overflow-y: scroll;
+	overflow-x: hidden;
+	height: 300px;
 }
 
 /*
